Moved to arduino-cmake-ng

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,16 @@
-cmake_minimum_required(VERSION 2.8.4)
-set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/ArduinoToolchain.cmake)
-set(PROJECT_NAME DcsBiosMcp)
-project(${PROJECT_NAME})
+cmake_minimum_required(VERSION 3.13.1)
 
-set(DcsBios_RECURSE True)
-set(DcsBiosMcp_RECURSE True)
-link_directories(..)
+set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/Arduino-Toolchain.cmake)
+set(ARDUINO_CMAKE_SKETCHBOOK_PATH ${CMAKE_SOURCE_DIR}/../..)
 
-set(McpMasterCaution_SKETCH examples/McpMasterCaution/McpMasterCaution.ino)
-generate_arduino_firmware(
-        McpMasterCaution
-)
+project(DcsBiosMcpLibrary)
 
-set(McpSwitchMultiPos_SKETCH examples/McpSwitchMultiPos/McpSwitchMultiPos.ino)
-generate_arduino_firmware(
-        McpSwitchMultiPos
-)
+get_board_id(uno_board_id uno)
 
-set(McpCautionPanel_SKETCH examples/McpCautionPanel/McpCautionPanel.ino)
-generate_arduino_firmware(
-        McpCautionPanel
-)
+set(dcsbios_mcp_sources src/DcsBiosMcp.h src/mcp/Mcp230xx.cpp)
+add_arduino_library(dcsbios_mcp_uno_lib ${uno_board_id} ${dcsbios_mcp_sources})
+add_arduino_core_lib(dcsbios_mcp_uno_lib ${uno_board_id})
+find_arduino_library(dcsbios_uno_lib DcsBios ${uno_board_id} 3RD_PARTY)
+link_arduino_library(dcsbios_mcp_uno_lib dcsbios_uno_lib ${uno_board_id})
+
+add_subdirectory(examples)
