--- a/library.properties
+++ b/library.properties
@@ -6,6 +6,6 @@ sentence=IO Expansion library for DcsBios.
 paragraph=Allows DcsBios sketches use MCP23017 and MCP23018 I2C chips as input and output pins.
 category=Other
 url=https://github.com/Gadroc/dcs-bios-arduino-mcp
-architectures=*
+architectures=avr
 dependencies=DcsBios,Wire
 core-dependencies=arduino (>=1.6.5)
