Fixed core library bug Cleaned up C++ syntax Moved to const where possible

--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=DcsBiosMcp
-version=1.0.1
+version=1.1.0
 author=Craig "Gadroc" Courtney <craig@dawnsedge.com>
 maintainer=Craig "Gadroc" Courtney <craig@dawnsedge.com>
 sentence=IO Expansion library for DcsBios.
@@ -7,5 +7,5 @@ paragraph=Allows DcsBios sketches use MCP23017 and MCP23018 I2C chips as input a
 category=Other
 url=https://github.com/Gadroc/dcs-bios-arduino-mcp
 architectures=avr
-dependencies=DcsBios,Wire
+dependencies=DcsBios (>=1.1.0),Wire
 core-dependencies=arduino (>=1.6.5)
